This file documents the revision history for UFL::Phonebook.

0.21
        - Add a few missing (mostly core) modules to Makefile.PL

0.20  Fri Aug 24 18:04:29 EDT 2007
        - Rename from Phonebook to UFL::Phonebook
        - Switch to Catalyst::Plugin::ConfigLoader
        - Move actions from application to Controller::Root
        - Convert /end to Catalyst::Action::RenderView
        - Move controller-specific configuration into the controller
          namespaces
        - Rename Model::Organization to Model::Unit to match the rest
          of the application
        - Refactor UFL::Phonebook::Entry to use newer style
          Catalyst::Model::LDAP
        - Split view into HTML and vCard content types
        - Convert controllers to Chained actions
        - Remove ugly uri_for override
        - Move address-related packages out of the ::Entry namespace
        - Add address inflation for 'Emergency Contact Mailing
          Address'
        - Convert to Class::Accessor::Fast
        - 404 on invalid source in Controller::Search
        - Add SASL-based LDAP connection class for authenticated
          phonebook
        - Add authentication bits for allowing access by any user
        - Use uri_for in Controller::Search for local URLs

0.19  Tue Nov 28 16:00:51 EST 2006
        - Cleanup {encode,decode}_ufid
        - Display "One hundred results are displayed below" instead of
          "the first 100 entries" when sizelimit is reached
        - Phonebook::Controller::People: Use get_url_args instead of
          hard coding use of uflEduUniversityId
        - Use uflEduPsDeptId instead of uflEduUniversityId for units,
          since that's now part of the DN
        - When searching for people in a unit, and only one person
          exists in the unit, redirect correctly to that person
        - Add trailing slash via uri_for instead of in HTML
        - Redirect unit URLs using the department UFID to the