@@ -2,6 +2,9 @@ This file documents the revision history for UFL::Phonebook.
 
 0.21
         - Add a few missing (mostly core) modules to Makefile.PL
+        - Add tests of LDAP ACLs
+        - Improve handling of environment-based authentication for
+          REMOTE_USER on mod_fastcgi
 
 0.20  Fri Aug 24 18:04:29 EDT 2007
         - Rename from Phonebook to UFL::Phonebook
